--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@ body {
     animation-iteration-count: infinite;
     animation-name: marquee-content;
     animation-timing-function: linear;
+    padding-top: 2rem;
 }
 
 @keyframes marquee-content {
@@ -38,6 +39,7 @@ body {
 
     .marquee__item {
         animation: none;
+        padding: 0.5rem !important;
     }
 
     .items_map {
@@ -51,6 +53,10 @@ body {
     .tech-name {
         opacity: 1;
         position: relative;
+    }
+
+    .tech_stack {
+        opacity: 0;
     }
 }
 
@@ -66,4 +72,8 @@ body {
 .tech-name {
     opacity: 0;
     position: absolute;
+}
+
+.tech_stack {
+    opacity: 1;
 }
