--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,7 @@ body {
     .marquee__item {
         animation: none;
         padding: 0.5rem !important;
+        width: 95%;
     }
 
     .items_map {
@@ -49,7 +50,7 @@ body {
     }
 
     .second_list {
-        opacity: 0;
+        display: none;
     }
 
     .tech-name {
