--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,20 @@
 @import "tailwindcss";
 
 body {
-    background-image: url("/background.png");
+    background:
+        radial-gradient(circle, hsla(0, 0%, 80%, 0.1) 1px, transparent 1px),
+        radial-gradient(circle, hsla(0, 0%, 80%, 0.1) 1px, transparent 1px);
+    background-position: 0 0, 0.5rem 0.5rem;
+    background-size: 1rem 1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: -1;
+    overflow: hidden;
+    filter: drop-shadow(0 0 2px rgba(255, 255, 255, 0.05));
 }
 
 .marquee {
