adjust scrollbar size

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,8 @@
 }
 
 .gray-scroll::-webkit-scrollbar {
-    height: 6px;
+    height: 1rem;
+    width: 0.5rem;
 }
 
 .gray-scroll::-webkit-scrollbar-track {
