create input component

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,16 @@
 .gray-scroll:hover::-webkit-scrollbar-thumb {
     background-color: rgba(148, 163, 184, 0.7);
 }
+
+.float-label-input {
+  margin: 32px 0;
+}
+
+.float-label-input:focus-within label,
+.float-label-input input:not(:placeholder-shown) + label,
+.float-label-input textarea:not(:placeholder-shown) + label,
+label.has-value {
+  transform: translateY(-1.5rem) scale(0.75);
+  background-color: black;
+  opacity: 1;
+}
